--- a/assets/css/prices.css
+++ b/assets/css/prices.css
@@ -46,6 +46,17 @@ body {
 
 
 
+.container .rentBtn {
+    background: var(--attention);
+    color: var(--general);
+    border: none;
+    border-radius: 8px;
+    padding: 10px 15px;
+    font-weight: 500;
+    transition: 0.3s;
+    text-shadow: none;
+
+}
 
 .btn {
     background: var(--attention);
@@ -138,6 +149,7 @@ body {
 
 .container-prices {
     padding: 0px;
+    margin: 10px;
 }
 
 .container-prices .card-container .card {
@@ -146,7 +158,7 @@ body {
 
 .container-prices .card-container .card:hover {
     transform: translateY(-8px);
-    box-shadow: 1px 1px 20px #4b3df2;
+    box-shadow: 1px 1px 25px var(--attention);
 }
 
 /* Stats Section */
@@ -156,6 +168,14 @@ body {
     border-radius: 18px;
     color: #fff;
     gap: 15px;
+}
+
+.container-prices .card-container .card img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    margin-bottom: 8px;
+    border-radius: 3px;
 }
 
 .stats-icon {
